slurm conf constrain ram space

--- a/cluster_tools/dockered-slurm/cgroup.conf
+++ b/cluster_tools/dockered-slurm/cgroup.conf
@@ -1,3 +1,4 @@
 # autodetect which is the default detects cgroup/v2 in the github CI,
 # which fails during the initialization of the c1 and c2 nodes
 CgroupPlugin=cgroup/v1
+ConstrainRAMSpace=yes
