--- a/cluster_tools/dockered-slurm/slurm.conf
+++ b/cluster_tools/dockered-slurm/slurm.conf
@@ -20,9 +20,9 @@ SwitchType=switch/none
 MpiDefault=none
 SlurmctldPidFile=/var/run/slurmd/slurmctld.pid
 SlurmdPidFile=/var/run/slurmd/slurmd.pid
-ProctrackType=proctrack/linuxproc
+ProctrackType=proctrack/cgroup
 
-TaskPlugin=task/affinity
+TaskPlugin=task/cgroup,task/affinity
 #TrackWCKey=no
 #TreeWidth=50
 #TmpFS=
@@ -61,7 +61,7 @@ JobCompType=jobcomp/filetxt
 JobCompLoc=/var/log/slurm/jobcomp.log
 #
 # ACCOUNTING
-JobAcctGatherType=jobacct_gather/linux
+JobAcctGatherType=jobacct_gather/cgroup
 JobAcctGatherFrequency=30
 JobAcctGatherParams=OverMemoryKill
 #
