switch cgroup v2 and ignore systemd

--- a/cluster_tools/dockered-slurm/cgroup.conf
+++ b/cluster_tools/dockered-slurm/cgroup.conf
@@ -1,4 +1,5 @@
 # autodetect which is the default detects cgroup/v2 in the github CI,
 # which fails during the initialization of the c1 and c2 nodes
-CgroupPlugin=cgroup/v1
+CgroupPlugin=cgroup/v2
 ConstrainRAMSpace=yes
+IgnoreSystemd=yes
