fix out of memory detection

--- a/cluster_tools/dockered-slurm/cgroup.conf
+++ b/cluster_tools/dockered-slurm/cgroup.conf
@@ -2,4 +2,5 @@
 # which fails during the initialization of the c1 and c2 nodes
 CgroupPlugin=cgroup/v2
 ConstrainRAMSpace=yes
+ConstrainSwapSpace=yes
 IgnoreSystemd=yes
