--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -66,7 +66,7 @@ Changelog = "https://github.com/scalableminds/webknossos-libs/blob/master/webkno
 
 # A list of all of the optional dependencies. They can be opted into by other apps.
 [project.optional-dependencies]
-tifffile = ["tifffile >=2024.8.24"]
+tifffile = ["tifffile >=2024.8.24, <2025.5.21"]
 imagecodecs = ["imagecodecs >=2021.11.20"]
 bioformats = ["JPype1 ~=1.5.0"]
 czi = ["pylibCZIrw ==5.0.0"]
