--- a/cluster_tools/pyproject.toml
+++ b/cluster_tools/pyproject.toml
@@ -2,9 +2,10 @@
 name = "cluster_tools"
 version = "0.0.0"  # filled by dunamai
 description = "Utility library for easily distributing code execution on clusters"
-authors = [{name= "scalable minds", email="hello@scalableminds.com"}] 
+authors = [{name= "scalable minds", email="hello@scalableminds.com"}]
 readme = "README.md"
-license = {text = "MIT"}
+license-files = ["LICENSE"]
+license = "MIT"
 requires-python = ">=3.10"
 dependencies = [
     "typing-extensions ~=4.12.0",
@@ -36,11 +37,6 @@ build-backend = "setuptools.build_meta"
 where = ["."]
 include = ["cluster_tools*"]
 exclude = ["cluster_tools.tests"]
-
-# This is a fix for an issue in setuptools. See: https://github.com/pypa/setuptools/issues/4759
-# This should be removed when the issue is resolved.
-[tool.setuptools]
-license-files = []
 
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
