--- a/webknossos/tests/cassettes/test_api_client/test_build_info.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_build_info.yml
@@ -18,19 +18,17 @@ http_interactions:
       status:
         code: 200
       headers:
-        x-powered-by: Express
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         access-control-max-age: '600'
         access-control-allow-origin: '*'
         x-permitted-cross-domain-policies: master-only
-        date: Tue, 15 Apr 2025 13:07:47 GMT
-        connection: close
+        date: Thu, 26 Jun 2025 13:17:43 GMT
         content-type: application/json
-        content-length: '409'
+        content-length: '427'
       body:
         encoding: utf8
         data: >-
-          {"webknossos":{"name":"webknossos","ciTag":"","commitHash":"920807ab93ef60ae4fd1ba6341c72989f123e13d","ciBuild":"","scalaVersion":"2.13.16","version":"dev","sbtVersion":"1.10.11","datastoreApiVersion":"2.0","commitDate":"Tue
-          Apr 15 13:27:44 2025
-          +0200"},"schemaVersion":130,"httpApiVersioning":{"currentApiVersion":9,"oldestSupportedApiVersion":5},"localDataStoreEnabled":true,"localTracingStoreEnabled":true}
+          {"webknossos":{"name":"webknossos","ciTag":"","commitHash":"9395ef6e554bbdd3bb6ca3c983a6a46f78e07ae8","ciBuild":"15878075585","scalaVersion":"2.13.16","version":"15878075585","sbtVersion":"1.11.0","datastoreApiVersion":"2.0","commitDate":"Wed
+          Jun 25 13:44:00 2025
+          +0000"},"schemaVersion":134,"httpApiVersioning":{"currentApiVersion":9,"oldestSupportedApiVersion":5},"localDataStoreEnabled":true,"localTracingStoreEnabled":true}
         compression: none
