--- a/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
@@ -19,15 +19,13 @@ http_interactions:
       status:
         code: 200
       headers:
-        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Tue, 15 Apr 2025 13:07:47 GMT
-        connection: close
+        date: Thu, 26 Jun 2025 13:17:42 GMT
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"NXWtg48VNXaL6KucQdkRsA"}'
+        data: '{"token":"yxa_wN2GNdj5hjzKwHOWWA"}'
         compression: none
