--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -307,6 +307,7 @@ jobs:
 
       - name: Python tests
         timeout-minutes: 30
+        shell: bash
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
         run: ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration
@@ -354,6 +355,7 @@ jobs:
       - cluster_tools_kubernetes
       - cluster_tools_dask
       - webknossos_linux
+      - webknossos_windows
     if: |
       always() &&
       !contains(needs.*.result, 'failure') &&
@@ -431,6 +433,7 @@ jobs:
       - cluster_tools_kubernetes
       - cluster_tools_dask
       - webknossos_linux
+      - webknossos_windows
     runs-on: ubuntu-latest
     if: |
       always() &&
@@ -492,6 +495,7 @@ jobs:
       - cluster_tools_kubernetes
       - cluster_tools_dask
       - webknossos_linux
+      - webknossos_windows
     if: |
       always() &&
       !contains(needs.*.result, 'failure') &&
@@ -528,16 +532,15 @@ jobs:
 
   complete:
     needs:
-      [
-        cluster_tools_dask,
-        cluster_tools_kubernetes,
-        cluster_tools_multiprocessing,
-        cluster_tools_slurm,
-        webknossos_linux,
-        webknossos_cli_docker,
-        docs,
-        pypi_and_gh_release,
-      ]
+      - cluster_tools_dask
+      - cluster_tools_kubernetes
+      - cluster_tools_multiprocessing
+      - cluster_tools_slurm
+      - webknossos_linux
+      - webknossos_windows
+      - webknossos_cli_docker
+      - docs
+      - pypi_and_gh_release
     if: always()
     runs-on: ubuntu-latest
     steps:
