--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -276,6 +276,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.12"]
+        group: [1, 2, 3]
       fail-fast: false
     defaults:
       run:
@@ -304,7 +305,48 @@ jobs:
         shell: bash
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
-        run: ./test.sh tests/dataset/test_dataset.py
+        run: ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration
+
+  webknossos_macos:
+    needs: changes
+    if: |
+      ${{ needs.changes.outputs.cluster_tools == 'true' }} ||
+      ${{ needs.changes.outputs.webknossos == 'true' }}
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: ["3.12"]
+        group: [1, 2, 3]
+      fail-fast: false
+    defaults:
+      run:
+        working-directory: webknossos
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+          cache-dependency-glob: "webknossos/uv.lock"
+
+      - name: Install proxay
+        run: npm install -g proxay
+
+      - name: Install minio
+        run: brew install minio/stable/minio
+
+      - name: Set up Python ${{ matrix.python-version }}
+        run: uv python install ${{ matrix.python-version }}
+
+      - name: Python tests
+        timeout-minutes: 30
+        shell: bash
+        env:
+          PYTHON_VERSION: ${{ matrix.python-version }}
+        run: ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration
+
 
   coverage_report:
     needs: [webknossos_linux]
@@ -350,6 +392,7 @@ jobs:
       - cluster_tools_dask
       - webknossos_linux
       - webknossos_windows
+      - webknossos_macos
     if: |
       always() &&
       !contains(needs.*.result, 'failure') &&
@@ -425,6 +468,7 @@ jobs:
       - cluster_tools_dask
       - webknossos_linux
       - webknossos_windows
+      - webknossos_macos
     runs-on: ubuntu-latest
     if: |
       always() &&
@@ -484,6 +528,7 @@ jobs:
       - cluster_tools_dask
       - webknossos_linux
       - webknossos_windows
+      - webknossos_macos
     if: |
       always() &&
       !contains(needs.*.result, 'failure') &&
@@ -523,6 +568,7 @@ jobs:
       - cluster_tools_slurm
       - webknossos_linux
       - webknossos_windows
+      - webknossos_macos
       - webknossos_cli_docker
       - docs
       - pypi_and_gh_release
